fix SVG dark mode

--- a/src/SCSS-Modules/navbar.scss
+++ b/src/SCSS-Modules/navbar.scss
@@ -233,7 +233,7 @@ nav {
   width: 100%;
   height: 600px;
   svg{
-    fill: rgb(231 227 235);
+    fill:  rgb(250 249 250);
     position: absolute;
   }
   .Earn_p_i_top_container {
